--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@emotion/react": "^11.6.0",
     "@emotion/styled": "^11.6.0",
+    "framer-motion": "^5.3.1",
     "next": "12.0.4",
     "polished": "^4.1.3",
     "react": "17.0.2",
