--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   "dependencies": {
     "@emotion/react": "^11.6.0",
     "@emotion/styled": "^11.6.0",
+    "formik": "^2.2.9",
     "framer-motion": "^5.3.1",
     "next": "12.0.4",
     "polished": "^4.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-grid-system": "^7.3.2"
+    "react-grid-system": "^8.1.1",
+    "react-intersection-observer": "^8.33.1"
   },
   "devDependencies": {
     "@types/node": "16.11.9",
