--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -30,7 +30,7 @@ jobs:
           node-version: ${{ matrix.node_version }}
       - run: yarn install --frozen-lockfile
       - run: yarn build
-      - run: yarn export
+      # - run: yarn export
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@3.6.2
