--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -35,6 +35,7 @@ jobs:
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@3.6.2
         with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: gh-pages
           folder: out
           clean: true
