--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -22,12 +22,13 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ${{ github.workspace }}/.next/cache
-          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/yarn-lock.json') }}
 
       - name: Install and Build
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node_version }}
+      - run: npm install -g yarn
       - run: yarn install --frozen-lockfile
       - run: yarn build
       # - run: yarn export
@@ -35,7 +36,7 @@ jobs:
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@3.6.2
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           branch: gh-pages
           folder: out
           clean: true
