--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.6.0",
     "@emotion/styled": "^11.6.0",
+    "classnames": "^2.3.1",
     "formik": "^2.2.9",
     "framer-motion": "^5.3.1",
     "next": "12.0.4",
@@ -19,8 +20,7 @@
     "react-dom": "17.0.2",
     "react-grid-system": "^8.1.1",
     "react-intersection-observer": "^8.33.1",
-    "react-scroll": "^1.8.6",
-    "react-tooltip": "^4.2.21"
+    "react-scroll": "^1.8.6"
   },
   "devDependencies": {
     "@types/node": "16.11.9",
@@ -28,6 +28,7 @@
     "@types/react-scroll": "^1.8.3",
     "eslint": "7",
     "eslint-config-next": "12.0.4",
+    "sass": "^1.51.0",
     "typescript": "4.5.2"
   }
 }
