--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -13,7 +13,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.x]
+        version: [16]
 
     steps:
       - name: Checkout
@@ -30,7 +30,7 @@ jobs:
       - name: Install and Build
         uses: actions/setup-node@v2
         with:
-          node-version: ${{ matrix.node_version }}
+          node-version: ${{ matrix.version }}
       - run: npm install -g yarn
       - run: yarn install --frozen-lockfile
       - run: yarn build
