--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -13,7 +13,7 @@ jobs:
 
     strategy:
       matrix:
-        version: [16]
+        version: [16.x]
 
     steps:
       - name: Checkout
@@ -24,6 +24,7 @@ jobs:
       - name: Cache
         uses: actions/cache@v2
         with:
+          node-version: ${{ matrix.version }}
           path: ${{ github.workspace }}/.next/cache
           key: ${{ runner.os }}-nextjs-${{ hashFiles('**/yarn-lock.json') }}
 
