--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-intersection-observer": "^8.33.1",
-    "react-scroll": "^1.8.6"
+    "react-scroll": "^1.8.6",
+    "usehooks-ts": "^3.1.0"
   },
   "devDependencies": {
     "@types/node": "16.11.9",
